Fixed a problem were atom:entry:title:div would create unwanted line breaks in titles.

--- a/content/templates/default/style.css
+++ b/content/templates/default/style.css
@@ -122,6 +122,9 @@ a img {
 	text-decoration: none;
 	cursor: pointer;
 }
+.title div { /* Atom flavored titles */
+        display:inline;
+}
 .source { /* Direct link to weblog post */
 }
 .source a {
